--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "lap-info-overlay",
   "version": "1.0.0",
-  "description": "``` brew install pkg-config cairo pango libpng jpeg giflib librsvg ```",
+  "description": "Overlay lap info with ffmpeg drawtext.",
   "main": "index.js",
   "scripts": {
-    "lap-timer": "node --loader ts-node/esm src/lapTimer.ts",
-    "web": "node --loader ts-node/esm src/web/server.ts",
+    "lap-timer": "node --import ./register-ts-node.js src/lapTimer.ts",
+    "web": "node --import ./register-ts-node.js src/web/server.ts",
     "type-check": "tsc --noEmit",
-    "test": "npm run type-check && node --loader ts-node/esm tests/laps.test.ts"
+    "test": "npm run type-check && node --import ./register-ts-node.js tests/laps.test.ts"
   },
   "type": "module",
   "keywords": [],
@@ -16,7 +16,6 @@
   "dependencies": {
     "@types/node": "^24.10.1",
     "@types/yargs": "^17.0.35",
-    "canvas": "^3.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "yargs": "^18.0.0"
   },
