--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@types/node": "^24.10.1",
     "@types/yargs": "^17.0.35",
     "better-sqlite3": "^9.4.0",
@@ -26,18 +27,19 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-relay": "^16.1.0",
+    "react-router-dom": "^6.30.2",
     "relay-runtime": "^16.1.0",
     "yargs": "^18.0.0"
   },
   "devDependencies": {
-    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/better-sqlite3": "^7.6.11",
+    "@types/fluent-ffmpeg": "^2.1.28",
+    "@types/pixelmatch": "^5.2.6",
+    "@types/pngjs": "^6.0.5",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/react-relay": "^18.2.1",
     "@types/relay-runtime": "^19.0.3",
-    "@types/pixelmatch": "^5.2.6",
-    "@types/pngjs": "^6.0.5",
     "esbuild": "^0.24.0",
     "pixelmatch": "^5.3.0",
     "pngjs": "^7.0.0",
