--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^24.10.1",
     "@types/yargs": "^17.0.35",
     "better-sqlite3": "^9.4.0",
+    "date-fns": "^4.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "graphql": "^16.9.0",
     "react": "^18.2.0",
