--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "web": "node --import ./register-ts-node.js src/web/server.ts",
-    "web:build": "esbuild src/web/client/index.tsx --bundle --sourcemap --outfile=public/app.js --format=esm --target=es2020 --jsx=automatic --define:process.env.NODE_ENV=\\\"development\\\"",
+    "web:build": "node ./scripts/build-web.js",
     "web:watch": "npm run web:build -- --watch",
     "db:migrate": "node --import ./register-ts-node.js src/db/migrate.ts",
     "type-check": "tsc --noEmit",
@@ -33,6 +33,9 @@
     "yargs": "^18.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
     "@types/better-sqlite3": "^7.6.11",
     "@types/fluent-ffmpeg": "^2.1.28",
     "@types/pixelmatch": "^5.2.6",
@@ -41,6 +44,7 @@
     "@types/react-dom": "^18.2.0",
     "@types/react-relay": "^18.2.1",
     "@types/relay-runtime": "^19.0.3",
+    "babel-plugin-relay": "^20.1.1",
     "esbuild": "^0.24.0",
     "pixelmatch": "^5.3.0",
     "pngjs": "^7.0.0",
