--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web:watch": "npm run web:build -- --watch",
     "db:migrate": "node --import ./register-ts-node.js src/db/migrate.ts",
     "type-check": "tsc --noEmit",
+    "relay": "relay-compiler",
     "test": "npm run type-check && vitest run --exclude **/overlay.integration.test.ts",
     "test:integration": "npm run type-check && vitest run tests/ffmpeg/overlay.integration.test.ts",
     "test:update-overlay-fixture": "UPDATE_OVERLAY_FIXTURE=1 npm run test:integration"
@@ -48,6 +49,7 @@
     "esbuild": "^0.24.0",
     "pixelmatch": "^5.3.0",
     "pngjs": "^7.0.0",
+    "relay-compiler": "^20.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "vitest": "^1.6.0"
