Fix add track session

--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "web:watch": "npm run web:build -- --watch",
     "db:migrate": "node --import ./register-ts-node.js src/db/migrate.ts",
     "type-check": "tsc --noEmit",
-    "check": "npm run type-check && npm run relay && npm run test",
+    "check": "npm run relay && npm run type-check &&  npm run test",
     "build": "npm run relay && npm run type-check  && npm run web:build",
     "watch": "npm-run-all -p relay:watch web:watch",
     "relay": "relay-compiler",
     "relay:watch": "relay-compiler --watch",
-    "test": "npm run type-check && vitest run --exclude **/overlay.integration.test.ts",
+    "test": "vitest run --exclude **/overlay.integration.test.ts",
     "test:integration": "npm run type-check && vitest run tests/ffmpeg/overlay.integration.test.ts",
     "test:update-overlay-fixture": "UPDATE_OVERLAY_FIXTURE=1 npm run test:integration"
   },
