--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "web:watch": "npm run web:build -- --watch",
     "db:migrate": "node --import ./register-ts-node.js src/db/migrate.ts",
     "type-check": "tsc --noEmit",
-    "check": "npm run relay && npm run type-check &&  npm run test",
+    "check": "npm run relay:codex && npm run type-check &&  npm run test",
     "build": "npm run relay && npm run type-check  && npm run web:build",
     "watch": "npm-run-all -p relay:watch web:watch",
     "relay": "relay-compiler",
+    "relay:codex": "/bin/zsh -lc 'PATH=\"/Users/jonny/.nvm/versions/node/v22.18.0/bin:/usr/bin:/bin:/usr/sbin:/sbin\" npx relay-compiler'",
     "relay:watch": "relay-compiler --watch",
     "test": "vitest run --exclude **/overlay.integration.test.ts",
     "test:integration": "npm run type-check && vitest run tests/ffmpeg/overlay.integration.test.ts",
