Circuits now have karts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
     "jsx": "react-jsx",
     "jsxImportSource": "@emotion/react",
     "strict": true,
@@ -17,7 +18,8 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "src/web/client/components/*": ["src/web/client/components/*"]
+      "src/web/client/components/*": ["src/web/client/components/*"],
+      "src/web/client/__generated__/*": ["src/web/client/__generated__/*"]
     }
   },
   "include": [
