--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "better-sqlite3": "^9.4.0",
     "date-fns": "^4.1.0",
     "fluent-ffmpeg": "^2.1.3",
+    "fontkit": "^2.0.4",
     "graphql": "^16.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -45,6 +46,7 @@
     "@babel/preset-typescript": "^7.28.5",
     "@types/better-sqlite3": "^7.6.11",
     "@types/fluent-ffmpeg": "^2.1.28",
+    "@types/fontkit": "^2.0.8",
     "@types/pixelmatch": "^5.2.6",
     "@types/pngjs": "^6.0.5",
     "@types/react": "^18.2.0",
